AI-Meerkat | 2024.3.1 Patch 2 <john@ti0044a400-0321.bb.online.no Update John_comments.xml, kotlin-onboarding.xml

--- a/templates/John_comments.xml
+++ b/templates/John_comments.xml
@@ -7,4 +7,11 @@
       <option name="KOTLIN" value="true" />
     </context>
   </template>
+  <template name="boc" value="///////////////////////////////////////////////////////////////////////////&#10;// $end$&#10;///////////////////////////////////////////////////////////////////////////" description="block of comments" toReformat="true" toShortenFQNames="true">
+    <variable name="end" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_CODE" value="true" />
+      <option name="KOTLIN" value="true" />
+    </context>
+  </template>
 </templateSet>
